Bug 408053 - [Brush-Presets-Docker] Long Brush Presets tag name causes brushes to disappear if the tag name is ellipsized due to docker resizing
Summary: [Brush-Presets-Docker] Long Brush Presets tag name causes brushes to disappea...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 4.2.0
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-29 07:41 UTC by Alfred R. Baudisch
Modified: 2019-07-10 14:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The bug in action when resizing the docker (193.68 KB, image/gif)
2019-05-29 07:41 UTC, Alfred R. Baudisch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alfred R. Baudisch 2019-05-29 07:41:51 UTC
Created attachment 120369 [details]
The bug in action when resizing the docker

SUMMARY

If the current Brush Preset tag name gets ellipsized upon resizing the Brush Preset docker, the brushes disappear.

As soon as the docker is resized again to the point that the tag name appears without being ellipsized, the brushes reapper.

STEPS TO REPRODUCE
1. Add some brushes to a long tag name, example: "MyKritaBrushesLongTag"
2. Select this tag as the active one
3. Resize the Brush Presets docker until the tag name appears ellipsized, example: "MyKritaBrushes...". The brushes will disappear.

OBSERVED RESULT
Brushes disappear if the tag name gets cut / shortened.

EXPECTED RESULT
Brushes should not disappear, since the tag name is only being adjusted to the UI size. Visibility should have no relation to the tag name size.

SOFTWARE/OS VERSIONS
Krita

 Version: 4.2.0
 Languages: en_US
 Hidpi: true

Qt

  Version (compiled): 5.12.2
  Version (loaded): 5.12.2

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 4.15.0-50-generic
  Pretty Productname: Ubuntu 16.04.6 LTS
  Product Type: ubuntu
  Product Version: 16.04


Hardware Information

  GPU Acceleration: auto
  Memory: 64375 Mb
  Number of Cores: 8
  Swap Location: /tmp
Comment 1 Halla Rempt 2019-07-10 14:20:32 UTC
Git commit dc224f4773d5d04ce7484047e6210dca77ef5882 by Boudewijn Rempt.
Committed on 10/07/2019 at 14:19.
Pushed by rempt into branch 'master'.

Fix KoTagChooserWidget not selecting items for tags that don't fit

M  +1    -1    libs/ui/dialogs/kis_dlg_png_import.cpp
M  +1    -1    libs/ui/dialogs/kis_dlg_preferences.cc
M  +2    -2    libs/ui/widgets/kis_color_space_selector.cc
M  +8    -5    libs/widgets/KoTagChooserWidget.cpp
M  +1    -0    libs/widgets/KoTagChooserWidget.h
M  +1    -1    libs/widgetutils/KisSqueezedComboBox.cpp
M  +1    -1    libs/widgetutils/KisSqueezedComboBox.h
M  +4    -4    plugins/dockers/lut/lutdocker_dock.cpp
M  +1    -1    plugins/impex/raw/3rdparty/libkdcraw/src/squeezedcombobox.cpp
M  +1    -1    plugins/impex/raw/3rdparty/libkdcraw/src/squeezedcombobox.h

https://invent.kde.org/kde/krita/commit/dc224f4773d5d04ce7484047e6210dca77ef5882
Comment 2 Halla Rempt 2019-07-10 14:26:24 UTC
Git commit 296519d7beed93fb07970810fc56f6a57712999e by Boudewijn Rempt.
Committed on 10/07/2019 at 14:26.
Pushed by rempt into branch 'krita/4.2'.

Fix KoTagChooserWidget not selecting items for tags that don't fit

M  +1    -1    libs/ui/dialogs/kis_dlg_png_import.cpp
M  +1    -1    libs/ui/dialogs/kis_dlg_preferences.cc
M  +2    -2    libs/ui/widgets/kis_color_space_selector.cc
M  +8    -5    libs/widgets/KoTagChooserWidget.cpp
M  +1    -0    libs/widgets/KoTagChooserWidget.h
M  +1    -1    libs/widgetutils/KisSqueezedComboBox.cpp
M  +1    -1    libs/widgetutils/KisSqueezedComboBox.h
M  +4    -4    plugins/dockers/lut/lutdocker_dock.cpp
M  +1    -1    plugins/impex/raw/3rdparty/libkdcraw/src/squeezedcombobox.cpp
M  +1    -1    plugins/impex/raw/3rdparty/libkdcraw/src/squeezedcombobox.h

https://invent.kde.org/kde/krita/commit/296519d7beed93fb07970810fc56f6a57712999e