Fix KoTagChooserWidget not selecting items for tags that don't fit

BUG:408053